<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/layout_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:hint="@string/empty"
                android:inputType="text"
                android:id="@+id/etNotes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/request_join"
            android:textColor="@color/white_message"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>