<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_background"
    tools:context=".components.signup.SignupActivity">

    <LinearLayout
        android:id="@+id/idLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imgtext"
            android:layout_width="300dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/imagenew"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/imagenew" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/fullName"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/retPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/retEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/retAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/birthdate"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Spinner

            android:background="@drawable/bgbutton_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/retPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reTypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbutton_white"
                android:paddingStart="20dp"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/chooserole"
                android:textColor="@color/bg_button"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RadioGroup
            android:checkedButton="@+id/studentRole"
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/outline"
            android:orientation="horizontal">

            <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/coachRole"
                android:background="@drawable/toggle_widget_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/coach"
                android:textColor="@color/white" />

            <RadioButton
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/studentRole"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/studentrole"
                android:textColor="@color/white" />
        </RadioGroup>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/coachConfig"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/retExperience"
                    android:layout_width="match_parent"
                    android:background="@drawable/bgbutton_white"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:paddingStart="20dp"
                    android:hint="Experience"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/retPricePerHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:paddingStart="20dp"
                    android:hint="Price Per Hour (Rp)"
                    android:background="@drawable/bgbutton_white"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/studentsConfig"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_marginTop="15dp"
                android:drawablePadding="10dp"
                android:background="@drawable/bgbutton_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/levelSkill" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/utr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:paddingStart="20dp"
                    android:hint="UTR"
                    android:background="@drawable/bgbutton_white"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Privacy Policy"
                android:id="@+id/kebijakanPrivasi"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text=" &amp; "
                android:textSize="14sp" />
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="General Information"
                android:id="@+id/informasiUmum"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bgbutton"
            android:text="@string/signup"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
