<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:layout_height="fill_parent"
    tools:context=".components.signin.SigninActivity">

    <LinearLayout
        android:layout_below="@+id/btnRegister"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/imagenew"
            app:srcCompat="@drawable/imagenew"
            android:layout_marginBottom="10dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbutton_white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/username"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:background="@drawable/bgbutton_white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingStart="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bgbutton"
            android:text="@string/signin_text"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="Don't have an account? "/>
            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:textAllCaps="false"
                android:textColor="@color/bg_button"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_gravity="left"
            android:text="Supported by:" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/pelti"/>


    </LinearLayout>


</ScrollView>

